add Github link

--- a/fits.qmd
+++ b/fits.qmd
@@ -59,7 +59,7 @@ tar_load(c(austa))
 
 # Introduction {#sec-introduction}
 
-Time series forecasting models use historical data to estimate future values [@fildes2008forecasting] based on consistent patterns observed in the past. However, time series are sometimes disrupted by unusual events that jeopardise the regularity of the time series pattern. This can be defined as an *interrupted time series*. Time series data may be disrupted by a variety of reasons, ranging from temporary policy changes to natural disasters. Outbreaks, epidemics, and pandemics, for example, may have a considerable impact on population behavior, causing discrepancies and interruptions of data in a variety of industries such as healthcare, pharmaceuticals, transportation, retail, tourism, and traffic management. Similarly, transportation-related data may be interrupted due to equipment failures, such as malfunctions or breakdowns in vehicles, aircraft, or rail systems, resulting in missing or inaccurate data points. Furthermore, cybersecurity breaches data quality by possibly skewing readings in datasets relating to financial transactions, network traffic, and user activity, complicating time series analysis. Supply chain disruptions induced by factors such as strikes or shortages cause irregularities in sales, inventory levels, production, and delivery, often resulting in data gaps. \textcolor{teal}{For example, the war in Ukraine caused disruptions in sunflower oil and wheat supply chains, which were most likely driven by social media and people's recent memories of the COVID-19 toilet paper shortage. A power outage in Eastern Germany halted production at a Tesla facility and cut off electricity to a large retailer distribution centre, disrupting supplies to around 500 stores in and around Berlin for several weeks. Recent strikes in various forms of transport, including air and rail in Germany, France, and the United Kingdom, have had an impact on passenger flow and retail sales at airports and train stations. These issues highlight the significance of robust forecasting systems in addressing such disruptions effectively.}
+Time series forecasting models use historical data to estimate future values [@fildes2008forecasting] based on consistent patterns observed in the past. However, time series are sometimes disrupted by unusual events that jeopardise the regularity of the time series pattern. This can be defined as an *interrupted time series*. Time series data may be disrupted by a variety of reasons, ranging from temporary policy changes to natural disasters. Outbreaks, epidemics, and pandemics, for example, may have a considerable impact on population behavior, causing discrepancies and interruptions of data in a variety of industries such as healthcare, pharmaceuticals, transportation, retail, tourism, and traffic management. Similarly, transportation-related data may be interrupted due to equipment failures, such as malfunctions or breakdowns in vehicles, aircraft, or rail systems, resulting in missing or inaccurate data points. Furthermore, cybersecurity breaches data quality by possibly skewing readings in datasets relating to financial transactions, network traffic, and user activity, complicating time series analysis. Supply chain disruptions induced by factors such as strikes or shortages cause irregularities in sales, inventory levels, production, and delivery, often resulting in data gaps. For example, the war in Ukraine caused disruptions in sunflower oil and wheat supply chains, which were most likely driven by social media and people's recent memories of the COVID-19 toilet paper shortage. A power outage in Eastern Germany halted production at a Tesla facility and cut off electricity to a large retailer distribution centre, disrupting supplies to around 500 stores in and around Berlin for several weeks. Recent strikes in various forms of transport, including air and rail in Germany, France, and the United Kingdom, have had an impact on passenger flow and retail sales at airports and train stations. These issues highlight the significance of robust forecasting systems in addressing such disruptions effectively.
 
 The disruptions may result in relatively simple changes in the series; for example a level shift at the start of the disruption, and another at the end of the disruption. Or they may be more complex, with changes to the seasonal patterns, and changes to the level, which evolve over time.
 
@@ -75,7 +75,7 @@ We introduce several strategies to handling interruptions when forecasting in @s
 
 # Handling interruptions when forecasting {#sec-methods}
 
-In this section, we describe several possible strategies to handle interruptions when forecasting time series data. \textcolor{teal}{The handling of time series interruptions is a complex and multifaceted issue, and the choice of the most appropriate strategy depends on the specific characteristics of the data and the nature of the interruption. Therefore, in this paper, we propose multiple strategies rather than a single approach to effectively address different situations and cases.}
+In this section, we describe several possible strategies to handle interruptions when forecasting time series data. The handling of time series interruptions is a complex and multifaceted issue, and the choice of the most appropriate strategy depends on the specific characteristics of the data and the nature of the interruption. Therefore, in this paper, we propose multiple strategies rather than a single approach to effectively address different situations and cases.
 
 ## Use a highly adaptive model
 
@@ -87,15 +87,15 @@ Similarly, time-varying parameter models exhibit high adaptability [@harvey2006f
 
 The prediction intervals from highly adaptive models tend to be wide because the model will have heavily discounted past data. In fact, the model will largely forget the past data other than the most recent observations, so there is no memory of the seasonal patterns and other dynamics that were present before the interruption. Consequently, the approach works best if there is no assumption that the post-interruption period will be similar to the pre-interruption period.
 
-\textcolor{teal}{The disadvantage of smoothing and other highly adaptive techniques is that they need time to adapt after a disturbance and can eventually end up chasing noise. The latter is an intriguing issue since individuals often prefer adaptability while failing to recognise that it does not necessarily improve forecasting.}
+The disadvantage of smoothing and other highly adaptive techniques is that they need time to adapt after a disturbance and can eventually end up chasing noise. The latter is an intriguing issue since individuals often prefer adaptability while failing to recognise that it does not necessarily improve forecasting.
 
 ## Use an intervention model
 
 One modelling approach that has gained popularity in handling disruptions is the intervention model, also known as interrupted time series (ITS) modelling, introduced by @box1975intervention. This approach focuses on understanding how and whether outcomes change following the implementation of an intervention, policy, or programme at a specific time point. ITS models provide a robust tool for analysing policy and programme evaluation across diverse domains [@bernal2017interrupted;@mcdowall2019interrupted]. These models can forecast future values by developing models that incorporate a range of components, such as pre-intervention levels, trends, seasonality, covariates related to the intervention time, and other external factors that might affect the outcome variable. A related approach is the multiple regimes model, which is particularly useful in forecasting due to its ability to capture structural changes and transitions observed in interrupted time series data [@Koopg2007].
 
-A special case of the intervention models proposed by @box1975intervention is a dynamic regression (or regression with ARIMA errors) model. This model includes covariates describing the interruption explicitly, with an ARIMA process describing the remaaining time series dynamics. For example, if the intervention involves a simple level shift with a reverse level shift at the end of the intervention, we can use a dummy variable to indicate the interruption period and allow the model to adjust to the interruption. More complicated interventions can be handled by using more covariates.
+A special case of the intervention models proposed by @box1975intervention is a dynamic regression (or regression with ARIMA errors) model. This model includes covariates describing the interruption explicitly, with an ARIMA process describing the remaining time series dynamics. For example, if the intervention involves a simple level shift with a reverse level shift at the end of the intervention, we can use a dummy variable to indicate the interruption period and allow the model to adjust to the interruption. More complicated interventions can be handled by using more covariates.
 
-This has the advantage of retaining the memory of the past, and so the seasonal patterns and other dynamics will be retained. This allows the change period to be effectively modelled, provided the intervention variables are chosen well. \textcolor{teal}{Intervention models are useful because they enable the forecasting of similar future disruptions, but distinguishing between a disruption and a general driving factor, such as a promotion or a seasonal storm, may become subjective.} However, the model will assume that the post-interruption period will be similar to the pre-interruption period, and so the prediction intervals may be too narrow, especially if there is a lasting effect beyond the end of the interruption.
+This has the advantage of retaining the memory of the past, and so the seasonal patterns and other dynamics will be retained. This allows the change period to be effectively modelled, provided the intervention variables are chosen well. Intervention models are useful because they enable the forecasting of similar future disruptions, but distinguishing between a disruption and a general driving factor, such as a promotion or a seasonal storm, may become subjective. However, the model will assume that the post-interruption period will be similar to the pre-interruption period, and so the prediction intervals may be too narrow, especially if there is a lasting effect beyond the end of the interruption.
 
 ## Set to missing
 
@@ -277,7 +277,7 @@ We have not previously used the weighted approach in practice, and open-source s
 
 Finally, the ensemble approach is useful when there is uncertainty about which approach to use, and will often result in greater accuracy due to the power of averaging.
 
-\textcolor{teal}{When forecasting interrupted time series data, exogenous variables associated with specific events should be identified and incorporated where possible, regardless of which approach is employed, since they may improve forecasting model performance.}
+When forecasting interrupted time series data, exogenous variables associated with specific events should be identified and incorporated where possible, regardless of which approach is employed, since they may improve forecasting model performance.
 
 We have not discussed probabilistic forecasting in any detail in this paper, other than producing some prediction intervals for some of the examples. One would expect forecast uncertainty to increase during, and to some extent after, a major disruption. The highly adaptive model and innovation model should produce relatively good prediction intervals, although the variance is often underestimated. Because the missing value approach is producing counterfactual ("what might have been") forecasts, the prediction intervals will often not include the actual observations during the disruption period. Prediction intervals for ensemble forecasts can be obtained by averaging the end points of the component prediction intervals [@lichtendahl2013better], for those models where the prediction intervals seem reasonable.
 
@@ -289,16 +289,16 @@ The proposed strategies to forecast interrupted time series offer various advant
 
 When determining a suitable approach to forecasting interrupted time series, several factors should be considered. To begin, the complexity of the interruption itself is critical to approach selection. Intervention models are a suitable approach for interruptions with known features since they can represent the disruption explicitly. In contrast, highly adaptable models give a simpler option for fast adaptations to interruptions without explicit modelling, which is especially useful when the time or effect of the interruption is unknown. Balancing simplicity and flexibility is critical to ensuring that the selected technique is consistent with the features of the interruption and the required forecasting accuracy. Further, the width of prediction intervals should be carefully assessed to determine forecast uncertainty, particularly during and after interruptions. Finally, for greater robustness and accuracy, investigating ensemble models that integrate various forecasting methods might be beneficial.
 
-\textcolor{teal}{Moreover, in determining which strategy to apply in each case, it is important to think through what is being assumed, and what data are being used. This is a qualitative and subjective process, and cannot simply be tackled with a quantitative comparison of forecast accuracy. The strategies we discuss have different ways of handling the disrupted period, and many of them do not seek to provide accurate forecasts during the disruption. For example, the "set to missing" strategy ignores the disrupted period, while the "estimate what might have been" strategy replaces the observations during the disruption with interpolations. In both cases, it does not make sense to evaluate the performance of the method during the disruption. Instead, the analyst needs to decide what approach makes the most sense for the application at hand.}
+Moreover, in determining which strategy to apply in each case, it is important to think through what is being assumed, and what data are being used. This is a qualitative and subjective process, and cannot simply be tackled with a quantitative comparison of forecast accuracy. The strategies we discuss have different ways of handling the disrupted period, and many of them do not seek to provide accurate forecasts during the disruption. For example, the "set to missing" strategy ignores the disrupted period, while the "estimate what might have been" strategy replaces the observations during the disruption with interpolations. In both cases, it does not make sense to evaluate the performance of the method during the disruption. Instead, the analyst needs to decide what approach makes the most sense for the application at hand.
 
-\textcolor{teal}{This study proposes multiple viable strategies for forecasting time series data interrupted by different type of events. Future research could focus on exploring new strategies for handling such disrupted time series, or enhancing probabilistic forecasting methods that are designed specifically for such data. Large-scale empirical research on further exploring which strategy may work best in different scenarios also provide useful insights.} Comparative studies that assess the accuracy, robustness, and computing efficiency of different techniques across several datasets and disruption situations can help discover the most effective approaches for a range of practical applications.
+This study proposes multiple viable strategies for forecasting time series data interrupted by different type of events. Future research could focus on exploring new strategies for handling such disrupted time series, or enhancing probabilistic forecasting methods that are designed specifically for such data. Large-scale empirical research on further exploring which strategy may work best in different scenarios also provide useful insights. Comparative studies that assess the accuracy, robustness, and computing efficiency of different techniques across several datasets and disruption situations can help discover the most effective approaches for a range of practical applications.
 
 # Reproducibility {.unnumbered}
 
-To enhance reproducibility and facilitate the adoption of proposed strategies, we provide the data and R code, as well as the entire paper written in R using [Quarto](https://quarto.org/) and the targets package for R [@targetsr2021]. All materials required to reproduce this paper will be accessible via a public GitHub repository once the paper is accepted for publication.
+To enhance reproducibility and facilitate the adoption of proposed strategies, we provide the data and R code, as well as the entire paper written in R using [Quarto](https://quarto.org/) and the targets package for R [@targetsr2021]. All materials required to reproduce this paper is accessible via the [GitHub repository](https://github.com/bahmanrostamitabar/forecasting_interrupted_time_series) .
 
 # Acknowledgment {.unnumbered}
 
-We thank Dr Stephan Kolassa and several referees for their thoughts and feedback on the first version of our paper. These comments have helped us to refine and improve our work.
+We thank Dr. Stephan Kolassa and several referees for their thoughts and feedback on the first version of our paper. These comments have helped us to refine and improve our work.
 
 # References
