--- a/fits.tex
+++ b/fits.tex
@@ -59,15 +59,17 @@
 \makesavenoteenv{longtable}
 \usepackage{graphicx}
 \makeatletter
-\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
-\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
-\makeatother
-% Scale images if necessary, so that they will not overflow the page
-% margins by default, and it is still possible to overwrite the defaults
-% using explicit options in \includegraphics[width, height, ...]{}
-\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+\newsavebox\pandoc@box
+\newcommand*\pandocbounded[1]{% scales image to fit in text height/width
+  \sbox\pandoc@box{#1}%
+  \Gscale@div\@tempa{\textheight}{\dimexpr\ht\pandoc@box+\dp\pandoc@box\relax}%
+  \Gscale@div\@tempb{\linewidth}{\wd\pandoc@box}%
+  \ifdim\@tempb\p@<\@tempa\p@\let\@tempa\@tempb\fi% select the smaller of both
+  \ifdim\@tempa\p@<\p@\scalebox{\@tempa}{\usebox\pandoc@box}%
+  \else\usebox{\pandoc@box}%
+  \fi%
+}
 % Set default figure placement to htbp
-\makeatletter
 \def\fps@figure{htbp}
 \makeatother
 
@@ -116,9 +118,7 @@
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
-\ifLuaTeX
-  \usepackage{selnolig}  % disable illegal ligatures
-\fi
+
 \usepackage[style=authoryear-comp,]{biblatex}
 \addbibresource{references.bib}
 \usepackage{bookmark}
@@ -223,7 +223,8 @@ events, intervention analysis, structural breaks},
 \DeclareDelimFormat[cbx@textcite]{nameyeardelim}{\addspace}
 \renewcommand*{\finalnamedelim}{\addspace\&\space}
 }{}
-\makeatother% Placement of logos
+\makeatother
+% Placement of logos
 
 \RequirePackage[absolute,overlay]{textpos}
 \setlength{\TPHorizModule}{1cm}
@@ -233,7 +234,7 @@ events, intervention analysis, structural breaks},
 % Title and date
 
 \title{Forecasting interrupted time series}
-\date{19 August 2024}
+\date{19 November 2024}
 
 \def\Date{\number\day}
 \def\Month{\ifcase\month\or
@@ -363,7 +364,7 @@ events, intervention analysis, structural breaks},
       \textit{Corresponding author}\\[0.5cm]%
    %
    }%
-   \lfoot{\sf Hyndman, Rostami-Tabar: 19 August 2024}
+   \lfoot{\sf Hyndman, Rostami-Tabar: 19 November 2024}
 
 % Keywords
 
@@ -398,6 +399,7 @@ interrupted data in numerous domains.
 analysis; 
   structural breaks.
 \end{keywords}
+
 
 \setstretch{1.5}
 \section{Introduction}\label{sec-introduction}
@@ -755,7 +757,7 @@ earlier than that.
 
 \centering{
 
-\includegraphics{fits_files/figure-pdf/fig-tourism-plot1-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{fits_files/figure-pdf/fig-tourism-plot1-1.pdf}}
 
 }
 
@@ -781,7 +783,7 @@ also show 90\% prediction intervals.
 
 \centering{
 
-\includegraphics{fits_files/figure-pdf/fig-tsol1-plot-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{fits_files/figure-pdf/fig-tsol1-plot-1.pdf}}
 
 }
 
@@ -819,7 +821,7 @@ prediction intervals even more.
 
 \centering{
 
-\includegraphics{fits_files/figure-pdf/fig-tsol2-plot-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{fits_files/figure-pdf/fig-tsol2-plot-1.pdf}}
 
 }
 
@@ -846,7 +848,7 @@ given the uncertainty in the industry at the end of 2022.
 
 \centering{
 
-\includegraphics{fits_files/figure-pdf/fig-tsol3-plot-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{fits_files/figure-pdf/fig-tsol3-plot-1.pdf}}
 
 }
 
@@ -872,7 +874,7 @@ too narrow, as there hasn't been sufficient recent data.
 
 \centering{
 
-\includegraphics{fits_files/figure-pdf/fig-tsol4-plot-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{fits_files/figure-pdf/fig-tsol4-plot-1.pdf}}
 
 }
 
@@ -896,7 +898,7 @@ disruption are real.
 
 \centering{
 
-\includegraphics{fits_files/figure-pdf/fig-tensemble-plot-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{fits_files/figure-pdf/fig-tensemble-plot-1.pdf}}
 
 }
 
@@ -942,7 +944,7 @@ day. The resulting time series is shown in Figure~\ref{fig-walkers}.
 
 \centering{
 
-\includegraphics{fits_files/figure-pdf/fig-walkers-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{fits_files/figure-pdf/fig-walkers-1.pdf}}
 
 }
 
@@ -984,7 +986,7 @@ two of subsequent lockdowns.
 
 \centering{
 
-\includegraphics{fits_files/figure-pdf/fig-walkers-plot1-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{fits_files/figure-pdf/fig-walkers-plot1-1.pdf}}
 
 }
 
@@ -1000,7 +1002,7 @@ level of the series.}
 
 \centering{
 
-\includegraphics{fits_files/figure-pdf/fig-walkers-plot2-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{fits_files/figure-pdf/fig-walkers-plot2-1.pdf}}
 
 }
 
@@ -1019,7 +1021,7 @@ series during subsequent lockdowns.}
 
 \centering{
 
-\includegraphics{fits_files/figure-pdf/fig-walkers-plot3-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{fits_files/figure-pdf/fig-walkers-plot3-1.pdf}}
 
 }
 
@@ -1037,7 +1039,7 @@ what might have been.}
 
 \centering{
 
-\includegraphics{fits_files/figure-pdf/fig-walkers-plot4-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{fits_files/figure-pdf/fig-walkers-plot4-1.pdf}}
 
 }
 
@@ -1055,7 +1057,7 @@ use non-lockdown data from the future.}
 
 \centering{
 
-\includegraphics{fits_files/figure-pdf/fig-walkers-ensemble-plot-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{fits_files/figure-pdf/fig-walkers-ensemble-plot-1.pdf}}
 
 }
 
@@ -1236,6 +1238,7 @@ us to refine and improve our work.
 
 
 \printbibliography[title=References]
+
 
 
 \end{document}
